--- a/client/index.html
+++ b/client/index.html
@@ -66,7 +66,7 @@
                             {{ $route.params.year || '2020' }}
                         </button>
                         <div class="dropdown-menu scrollable-menu" aria-labelledby="dropDownYear">
-                            <a class="dropdown-item" href=# v-for="y in years" v-on:click="navigate(y)">{{ y }}</a>
+                            <a class="dropdown-item" v-for="y in years" v-on:click="navigate(y)">{{ y }}</a>
                         </div>
                     </div>
                 </li>
